# RSingleRust

./: DESCRIPTION  NAMESPACE  README.md  RSingleRust.Rproj
R/: extendr-wrappers.R
man/: get_qc_metrics.Rd  read_h5ad_memory.Rd  read_matrix.Rd  read_matrix_SCE.Rd  read_matrix_dense.Rd  read_matrix_hdf5.Rd  rusttest-package.Rd  update_S4.Rd
src/: Makevars  Makevars.in  Makevars.win.in  entrypoint.c  rusttest-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs
src/rust/src/SCE/: mod.rs
src/rust/src/auxiliary/: mod.rs
src/rust/src/io/: mod.rs
src/rust/src/statistics/: mod.rs
testthat/: testthat.R
testthat/testthat/: test-processing.R  test-read_matrix.R
