[package]
name = 'RSingleRust'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'RSingleRust'

[dependencies]
extendr-api = '0.8.1'
anndata = "0.6.2"
anndata-hdf5 = "0.5.2"
anndata-memory = "1.0.7"
anyhow = "1.0.86"

[profile.release]
lto = true
codegen-units = 1
