[package]
name = 'RSingleRust'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'RSingleRust'

[dependencies]
extendr-api = { version = "0.8.1", features = ["ndarray"] }
anndata = "0.6.2"
anndata-hdf5 = "0.5.2"
anndata-memory = "1.0.7"
anyhow = "1.0.86"
nalgebra-sparse = "0.11.0"
single_rust = "0.5.6"
polars-core = "0.53.0"
# polars = "0.51.0"
arrow_extendr = { version = "58.0.0", features = ["polars"], default-features = false }

[profile.release]
lto = true
codegen-units = 1
